--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'Geometry -- Foundations'
 - !lcc 'QA'
+- GITenberg
 title: The Foundations of Geometry
 url: http://www.gutenberg.org/ebooks/17384
